--- a/source/styles.css
+++ b/source/styles.css
@@ -13,7 +13,7 @@
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.10);
     padding: 20px 30px;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.5s ease, display 0s ease;
 }
 .closeButton {
     position: absolute;
@@ -68,4 +68,17 @@
 }
 .mauticform-errormsg {
     margin-top: 5px !important;
+}
+@keyframes fadeInAndOut {
+    0%, 100% { opacity: 0; }
+    50% { opacity: 1; }
+}
+.animated-checkmark {
+    animation: fadeInAndOut 6s linear;
+    width: 200px;
+    margin: 0 auto;
+    display: block;
+}
+#popupContainer h2 {
+  	margin-bottom: 20px;
 }
