--- a/source/styles.css
+++ b/source/styles.css
@@ -16,6 +16,7 @@
     padding: 20px 30px;
     opacity: 0;
     transition: opacity 0.5s ease, display 0s ease;
+    z-index: 9999;
 }
 .closeButton {
     position: absolute;
