--- a/source/styles.css
+++ b/source/styles.css
@@ -94,40 +94,35 @@
     position: relative;
 }
 .mauticform-radiogrp-radio {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    margin: 5px auto;
-}
-.mauticform-radiogrp-label {
     position: relative;
-    padding-left: 30px; /* Відступ для кружка */
-    cursor: pointer;
+    width: 16px;
+    height: 16px;
 }
-.mauticform-radiogrp-label::before {
+.mauticform-radiogrp-radio::before {
     content: '';
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 0;
-    transform: translateY(-50%);
-    width: 10px;
-    height: 10px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #007BFF;
     border-radius: 50%;
     background-color: transparent;
+    box-sizing: border-box;
 }
-.mauticform-radiogrp-label::after {
-	content: '';
+.mauticform-radiogrp-radio::after {
+content: '';
     position: absolute;
     top: 50%;
-    left: 1px;
-    transform: translateY(-50%);
-    width: 6px;
-    height: 6px;
-    border: 2px solid #fff;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 8px;
+    height: 8px;
+    border: 3px solid #fff;
     border-radius: 50%;
-  	background-color: transparent;
+    background-color: transparent;
+    box-sizing: content-box;
 }
-.mauticform-radiogrp-radio:checked ~ .mauticform-radiogrp-label::before {
+.mauticform-radiogrp-radio:checked::before {
   background-color: #007BFF;
 }
